src/test/deca/codegen/invalid/created/div_0.ass
	TSTO #1
	BOV pile_pleine
	ADDSP #1
; start main program
; Main program
	LOAD #1, R2
	QUO #0, R2
	BOV division_par_zero
	STORE R2, 1(GB)
; Beginning of main instructions:
	HALT
; Erreurs
division_par_zero:
	WSTR "Erreur : division_par_zero"
	WNL
	ERROR
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
; end main program
